      [Contributed by Michael Tao]
    - Fixed a bug in the unit test for util::CpuTimer on Windows by using a
      more accurate sleep implementation.
    - Fixed a bug where the requested uniform value of an AttributeArray was
      not being applied on attribute creation if the default attribute value
      was not the default value for that value type.

    API changes:
    - Removed a number of deprecated point methods.
    - points::StringIndexType is now deprecated, use Index instead.
    - PointPartitioner::voxelOffsets() now returns a std::unique_ptr instead of
      a boost::scoped_array.
    - Renamed AttributeSet::Descriptor::nextUnusedGroupOffset() to
      AttributeSet::Descriptor::unusedGroupOffset() to allow for providing an
      optional group offset hint.

    Houdini:
    - Platonic SOP is now verbified.
    - Extend all SOP references to support VDB Points.
    - Combine SOP will not error in flatten-all mode if second has no grids.
    - Changed the label (but not the opname) of Resize Narrow Band SOP to match
      the corresponding native Houdini SOP. The new label is Activate SDF.
    - Fixed a bug by using GEO_Detail::getBBox() instead of
      GEO_Detail::computeQuickBounds() as the latter was incorrectly using the
      point of the VDB when computing bounding box. SOPs affected include Clip,
      Fill, Points Group, Rasterize Points, Read, Remove Divergence.
      [Contributed by Kuba Roth]

    Build:
    - Improved the CMake build for the OpenVDB Houdini library on Windows.
      [Reported by Ian Woodward]
    - Fixed a bug in the CMake FindIlmBase/OpenEXR modules which could cause
      compilers on UNIX systems to fail to find stdlib.h if IlmBase/OpenEXR
      headers were installed to /usr/include.
    - CMake now checks the minimum supported MSVC compiler for Windows.
    - CMake now only requires a CXX compiler.
    - Improved the Windows README instructions and various MSVC warnings.